--- a/css/styles.css
+++ b/css/styles.css
@@ -2,24 +2,48 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Inter", sans-serif;
+    font-family: var(--inter);
 }
 :root{
     --white: #FFFFFF;
     --black: #141416;
+    --light-gray: #97a4b6;
     --gray: #34363C;
     --primary: #64BBCD;
+    --dark-primary: #358493;
     --secondary: rgb(58, 205, 131);
     --secondary-50: rgba(58, 205, 131, 0.5);
     --dribbble: #EA4C89;
     --behance: #053eff;
     --linkedin: #0077B5;
+    --inter: "Inter", sans-serif;
+    --manrope: "Manrope", sans-serif;
+    --roboto: "Roboto", sans-serif;
 }
 body{
     background-color: var(--black);
     width: 100%;
-    height: 100vh;
-    overflow-y: scroll;
+}
+.section-1{
+    height: 840px;
+    position: relative;
+    overflow: hidden;
+}
+.background-gradient{
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(53,132,147,0.5) 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,0) 100%);
+    position: absolute;
+    bottom: 0;
+    transform: translateY(50%);
+    z-index: 1;
+}
+.circles{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 2;
 }
 header{
     width: 100%;
@@ -27,6 +51,7 @@ header{
     justify-content: space-between;
     padding: 30px 40px;
     position: relative;
+    z-index: 3;
 }
 .logo{
     height: 40px;
@@ -166,4 +191,125 @@ nav ul li a{
 .medium:hover{
     background-color: var(--gray);
     color: var(--primary);
+}
+.section-1-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    z-index: 4;
+}
+.profile-container{
+    padding: 4px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.profile-container img{
+    width: 120px;
+    margin-bottom: 20px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+}
+.profile-container p{
+    width: 100%;
+    margin-bottom: 8px;
+    color: var(--white);
+    font-size: 40px;
+    font-family: var(--roboto);
+    font-weight: 500;
+}
+.profile-container h3{
+    color: var(--light-gray);
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+.section-1-container h2{
+    width: 70%;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0 16px;
+    color: var(--white);
+    font-family: var(--manrope);
+    font-size: 70px;
+    font-weight: 600;
+}
+.section-1-container h2 span.blue{
+    color: var(--primary);
+}
+.section-1-container p.section-1-description{
+    width: 50%;
+    margin-bottom: 50px;
+    color: var(--light-gray);
+    font-size: 20px;
+    text-align: center;
+    line-height: 28px;
+}
+.buttons{
+    margin-bottom: 50px;
+    display: flex;
+    gap: 20px;
+}
+.button{
+    height: 60px;
+    padding: 20px 40px;
+    display: inline-block;
+    position: relative;
+    color: var(--white);
+    font-size: 20px;
+    text-decoration: none;
+    border-radius: 30px;
+    overflow: hidden;
+}
+.button-type-1{
+    background-color: var(--primary);
+    border: solid 1px var(--primary);
+}
+.button-type-2{
+    background-color: transparent;
+    border: solid 1px var(--light-gray);
+    transition: .2s;
+}
+.button-type-2:hover{
+    border: solid 1px var(--primary);
+    transition: .2s;
+}
+.button span p:nth-child(1){
+    opacity: 0;
+}
+.button span p:nth-child(2), .button span p:nth-child(3){
+    width: 100%;
+    height: 60px;
+    padding: 16px;
+    position: absolute;
+    text-align: center;
+    border-radius: 500%;
+    transition: .2s;
+}
+.button span p:nth-child(2){
+    top: 0;
+    left: 0;
+}
+.button span p:nth-child(3){
+    top: 60px;
+    left: 0;
+}
+.button-type-1 span p:nth-child(3){
+    background-color: var(--dark-primary);
+}
+.button-type-2 span p:nth-child(3){
+    background-color: var(--primary);
+}
+.button:hover span p:nth-child(2){
+    top: -60px;
+    border-radius: 30px;
+    transition: .2s;
+}
+.button:hover span p:nth-child(3){
+    top: 0px;
+    border-radius: 30px;
+    transition: .2s;
 }
