--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,7 @@ nav ul li a{
     font-weight: 600;
 }
 .section-1-container h2 span.blue{
+    background-color: transparent;
     color: var(--primary);
 }
 .section-1-container p.section-1-description{
@@ -306,10 +307,128 @@ nav ul li a{
 .button:hover span p:nth-child(2){
     top: -60px;
     border-radius: 30px;
-    transition: .2s;
+    transition: .5s;
 }
 .button:hover span p:nth-child(3){
     top: 0px;
     border-radius: 30px;
+    transition: .5s;
+}
+.section-2, .section-3{
+    width: 100%;
+    height: 100vh;
+    padding: 150px 100px;
+    position: relative;
+}
+.black{
+    background-color: var(--black);
+    color: var(--white);
+}
+.blue{
+    background-color: var(--primary);
+    color: var(--white);
+}
+.white{
+    background-color: var(--white);
+    color: var(--black);
+}
+.black h3, .white h3{
+    margin-bottom: 40px;
+    color: var(--light-gray);
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.section-info{
+    width: 100%;
+    display: flex;
+    gap: 100px;
+}
+.info-text{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.section-2 .info-text{
+    width: 70%;
+}
+.section-3 .info-text{
+    width: 70%;
+}
+.info-text h2{
+    font-size: 72px;
+    font-weight: 600;
+}
+.info-text p{
+    font-size: 40px;
+    font-weight: 600;
+}
+.black .info-text p{
+    color: var( --light-gray);
+}
+.section-3 .info-text p{
+    font-size: 30px;
+    font-weight: 500;
+}
+.additional-info{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.section-2 .additional-info{
+    width: 30%;
+}
+.section-3 .additional-info{
+    width: 10%;
+}
+.additional-info p{
+    font-size: 20px;
+}
+.big-button{
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    right: 100px;
+    bottom: 100px;
+    color: var(--white);
+    border-radius: 50%;
+    overflow: hidden;
+    transition: .2s;
+}
+.big-button:hover{
+    right: 110px;
+    bottom: 120px;
+    transition: .2s;
+}
+.button-info{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    white-space: nowrap;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 2;
+}
+.circle{
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-radius: 50%;
+    transform: translateY(100%);
+    z-index: 1;
+    transition: .2s;
+}
+.blue > .circle{
+    background-color: var(--dark-primary);
+}
+.black > .circle{
+    background-color: var(--primary);
+}
+.big-button:hover .circle{
+    transform: translateY(0%);
     transition: .2s;
 }
