--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
 }
 :root{
     --white: #FFFFFF;
+    --text: #c3c9d3;
+    --border-black: #454756;
+    --black-tag: #1c1d20;
     --black: #141416;
     --light-gray: #97a4b6;
     --gray: #34363C;
@@ -431,4 +434,117 @@ nav ul li a{
 .big-button:hover .circle{
     transform: translateY(0%);
     transition: .2s;
+}
+.topics{
+    padding: 0 100px;
+    display: flex;
+}
+.topics > div{
+    width: 50%;
+    position: relative;
+}
+.topic-title{
+    height:fit-content;
+    display: flex;
+    align-items: center;
+    border-top: solid 1px var(--light-gray);
+}
+.topic-title p{
+    margin-right: 100px;
+    padding: 50px 0;
+    color: var(--light-gray);
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.topic-title h2{
+    color: var(--text);
+    font-size: 28px;
+}
+.topic-description{
+    padding: 50px 0;
+    border-top: solid 1px var(--light-gray);
+}
+.topic-description > p{
+    margin-bottom: 30px;
+    font-size: 20px;
+    line-height: 28px;
+}
+.black .topic-description > p{
+    color: var(--text);
+}
+.topic-tags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.tag{
+    padding: 12px 16px;
+    font-size: 20px;
+    border: solid 1px var(--light-gray);
+    border-radius: 22px;
+}
+.black .tag{
+    background-color: var(--black-tag);
+    color: var(--light-gray);
+    border: solid 1px var(--border-black);
+}
+.sub-topics{
+    max-height: 100vh;
+    padding: 100px 0 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    overflow-y: scroll;
+}
+.sub-topics::-webkit-scrollbar {
+    width: 0px;
+}
+.sub-topics h3{
+    margin-bottom: 12px;
+    color: var(--black);
+    font-size: 28px;
+    text-transform: none;
+}
+.sub-topic > p{
+    margin-bottom: 30px;
+    font-size: 20px;
+    line-height: 28px;
+}
+.white .sub-topics > p{
+    color: var(--text);
+}
+.topic-title .section-info{
+    width: 100%;
+    height: 100vh;
+    padding-top: 100px;
+    display: flex;
+    gap: 100px;
+}
+.topic-title .info-text{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.topic-title .info-text h2{
+    color: var(--black);
+    font-size: 72px;
+    font-weight: 600;
+}
+.topic-title .info-text p{
+    padding: 0;
+    color: var(--black);
+    font-size: 30px;
+    font-weight: 500;
+    text-transform: none;
+}
+.topic-title .big-button{
+    left: 0;
+    bottom: 0;
+    color: var(--white);
+}
+.topic-title .big-button .button-info p{
+    margin: 0;
+    color: var(--white);
+    text-transform: none;
 }
