--- a/css/styles.css
+++ b/css/styles.css
@@ -721,3 +721,32 @@ ul li:nth-child(5):hover ~ .project-view .project-images img:nth-child(1){
     bottom: 0;
     right: 0;
 }
+.projects-gallery{
+    width: 100%;
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    position: relative;
+    overflow: hidden;
+}
+.projects-row{
+    width: 100%;
+    display: flex;
+    gap: 20px;
+}
+.project-image{
+    width: 550px;
+}
+.projects-gallery .big-button{
+    transform: translateX(-50%) translateY(-50%);
+    transition: 0s;
+    pointer-events: none;
+}
+.wave{
+    width: 100%;
+}
+footer{
+    width: 100%;
+    height: 100vh;
+}
